--- a/package.json
+++ b/package.json
@@ -154,7 +154,7 @@
     "jitsi": "cd src/vendor/lib-jitsi-meet && npm run build",
     "jitsi:init": "cd src/vendor/lib-jitsi-meet && npm i",
     "postinstall": "npm run jitsi:init && npm run jitsi",
-    "dev": "drumee-ui-devel",
+    "dev": "drumee-ui-devel --endpoint=somanos",
     "deploy": "drumee-ui-deploy",
     "add-widget": "drumee-make-widget",
     "md:style": "cd src/drumee && sass -I ./skin --no-source-map --update builtins/editor/markdow/skin/viewer.scss builtins/editor/markdow/template/style.css.txt",
