Changed welcome/signup permit direct signup changed core/kind : unify dictionnary

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-env": "^7.19.1",
     "@drumee/ui-dev-tools": "^1.0.11",
     "@eslint/js": "^9.4.0",
+    "argparse": "^2.0.1",
     "babel-loader": "^8.2.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^4.0.0",
@@ -52,7 +53,6 @@
     "json-loader": "^0.5.7",
     "jsonfile": "^6.1.0",
     "mini-css-extract-plugin": "^2.6.1",
-    "minimist": "^1.2.6",
     "node-gyp": "^9.1.0",
     "postcss": "^8.4.16",
     "postcss-cli": "^10.0.0",
@@ -94,7 +94,7 @@
     "daterangepicker": "^3.1.0",
     "dayjs": "^1.11.6",
     "detect-browser": "^5.3.0",
-    "dompurify": "^2.5.8",
+    "dompurify": "^3.2.6",
     "events": "^3.3.0",
     "filesize": "^9.0.11",
     "findup-sync": "^5.0.0",
