--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "postinstall": "npm run jitsi:init && npm run jitsi",
     "dev": "drumee-ui-devel",
     "deploy": "drumee-ui-deploy",
+    "build": "npx update-browserslist-db@latest && ./webpack/seeds/index.js && drumee-ui-deploy",
     "add-widget": "drumee-make-widget",
     "md:style": "cd src/drumee && sass -I ./skin --no-source-map --update builtins/editor/markdow/skin/viewer.scss builtins/editor/markdow/template/style.css.txt",
     "seeds": "npx update-browserslist-db@latest && ./webpack/seeds/index.js"
