--- a/desktop/package.json
+++ b/desktop/package.json
@@ -91,7 +91,7 @@
     "preinstall": "npm install better-sqlite3 --build-from-source --sqlite3=\"$(pwd)/sqlite-amalgamation\"",
     "postinstall": "electron-builder install-app-deps",
     "normal": "electron .",
-    "dev": "electron . --dev=1 --open-dev=1 --trace-watcher=1 --endpoint=devel",
+    "dev": "electron . --dev=1 --open-dev=1 --trace-watcher=1 --endpoint=somanos",
     "demo": "electron . --dev",
     "start:prod": "electron . --prod",
     "build": "electron-builder",
