Cleaned behavior Fixed mobile touch events (using jquery-ui-touch-ouch)

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
-    "@drumee/ui-dev-tools": "^1.0.15",
+    "@drumee/ui-dev-tools": "^1.0.16",
     "@eslint/js": "^9.4.0",
     "argparse": "^2.0.1",
     "babel-loader": "^8.2.5",
@@ -102,8 +102,9 @@
     "gsap": "^3.11.1",
     "hls.js": "^1.3.3",
     "html2canvas": "^1.4.1",
-    "jquery": "^3.6.1",
-    "jquery-ui": "^1.14.0",
+    "jquery": "^3.7.1",
+    "jquery-ui": "^1.14.1",
+    "jquery-ui-touch-punch": "^0.2.3",
     "jquery.touch": "^1.0.0",
     "js-cookie": "^3.0.1",
     "json2md": "^2.0.0",
@@ -144,6 +145,7 @@
     "jitsi:init": "cd src/vendor/lib-jitsi-meet && npm i",
     "postinstall": "npm run jitsi:init && npm run jitsi",
     "dev": "drumee-ui-devel",
+    "stage": "drumee-ui-devel stage",
     "deploy": "drumee-ui-deploy",
     "build": "npx update-browserslist-db@latest && ./webpack/seeds/index.js && drumee-ui-deploy",
     "add-widget": "drumee-make-widget",
